working on ground level staff like customer, crm